<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redback"
    tools:ignore="ExtraText">

    //Linear Layout for Now Playing Activity

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".NowPlaying">

        //click to go back to music library.

        <ImageView
            android:id="@+id/library_button"
            android:contentDescription="@string/music_library_button"
            android:layout_width="@dimen/width_height_library_button"
            android:layout_height="@dimen/width_height_library_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_library_button"
            android:src="@drawable/library" />

        //song art image

        <ImageView
            android:id="@+id/image_song"
            android:contentDescription="@string/art_of_the_song_playing"
            android:layout_width="@dimen/Width_height_now_playing_song_art"
            android:layout_height="@dimen/Width_height_now_playing_song_art"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_bottom_song_art"
            android:layout_marginTop="@dimen/margin_top_song_art" />

        //TextView for song name.

        <TextView
            android:id="@+id/songg_namee"
            style="@style/NowPlayingSongAndArtist"
            android:textSize="@dimen/text_size_song_name_now_playing"
            tools:text="Song Name" />

        //TextView for artist name.

        <TextView
            android:id="@+id/artist_naamee"
            style="@style/NowPlayingSongAndArtist"
            android:layout_marginTop="@dimen/margin_top_artist_name_now_playing"
            android:textSize="@dimen/text_size_artist_name_now_playing"
            tools:text="Song Artist" />

        //Control buttons.

        <LinearLayout
            style="@style/controlButtonsLinearLayout">

            // Play button

            <ImageView
                android:id="@+id/play_button"
                android:contentDescription="@string/play_button_des"
                style="@style/controlButtons"
                android:src="@drawable/play" />

            // Pause button

            <ImageView
                android:id="@+id/pause_button"
                android:contentDescription="@string/pause_button_des"
                style="@style/controlButtons"
                android:src="@drawable/pause" />

            // Stop button

            <ImageView
                android:id="@+id/stop_button"
                android:contentDescription="@string/stop_button_des"
                style="@style/controlButtons"
                android:layout_marginRight="@dimen/margin_right_stop_button"
                android:src="@drawable/stop" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>